<resources>
    <string name="app_name">AppVente</string>

    <!-- Connexion sociale : à remplacer par vos vraies valeurs Firebase / Facebook -->
    <string name="facebook_app_id" translatable="false">000000000000000</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb000000000000000</string>
    <string name="facebook_client_token" translatable="false">00000000000000000000000000000000</string>

    <string name="ajouter_vendeur">Ajouter un vendeur</string>
    <string name="modifier_vendeur">Modifier le vendeur</string>
    <string name="nom_vendeur">Nom du vendeur</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="photo_vendeur">Photo du vendeur</string>
    <string name="choisir_photo">Choisir une photo</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="rechercher">Rechercher</string>
    <string name="rechercher_hint">Rechercher un vendeur par nom…</string>
    <string name="date_debut_filtre">Du (naissance)</string>
    <string name="date_fin_filtre">Au (naissance)</string>
    <string name="effacer_filtre">Effacer le filtre</string>
    <string name="aucun_resultat_filtre">Aucun vendeur ne correspond aux critères de filtrage.</string>
    <string name="champ_obligatoire">Ce champ est obligatoire</string>
    <string name="date_obligatoire">Veuillez choisir une date de naissance</string>
    <string name="date_future">La date de naissance ne peut pas être dans le futur</string>
    <string name="nom_trop_court">Le nom doit contenir au moins 2 caractères</string>
    <string name="aucun_vendeur">Aucun vendeur pour le moment.\nAppuyez sur + pour en ajouter un.</string>
    <string name="aucun_resultat">Aucun résultat pour « %1$s ».</string>
    <string name="vendeur_ajoute">Vendeur ajouté</string>
    <string name="vendeur_modifie">Vendeur modifié</string>
    <string name="vendeur_supprime">Vendeur supprimé</string>
    <string name="supprimer_titre">Supprimer le vendeur</string>
    <string name="supprimer_message">Voulez-vous vraiment supprimer %1$s ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="quitter_titre">Quitter sans enregistrer ?</string>
    <string name="quitter_message">Vos modifications n\'ont pas été enregistrées. Voulez-vous vraiment quitter ?</string>
    <string name="quitter">Quitter</string>
    <string name="annuler">Annuler</string>
    <string name="titre_avec_compte">%1$s (%2$d)</string>
    <string name="sous_titre_liste">Gestion des vendeurs</string>
    <string name="informations_vendeur">Informations du vendeur</string>
    <string name="changer_photo">Changer la photo</string>
    <string name="ajouter_court">Ajouter</string>
    <string name="ajouter_premier_vendeur">Ajouter un vendeur</string>
    <string name="exemple_nom">Ex : Rakoto Jean</string>

    <!-- Nouveaux messages pour la validation de l'âge -->
    <string name="age_minimum">La personne doit avoir au moins %d ans</string>
    <string name="age_maximum">La personne ne peut pas avoir plus de %d ans</string>

    <!-- Connexion et inscription -->
    <string name="connexion_titre">Connexion</string>
    <string name="connexion_sous_titre">Gérez vos vendeurs en toute sécurité</string>
    <string name="inscription_titre">Inscription</string>
    <string name="inscription_sous_titre">Créez un compte pour commencer</string>
    <string name="nom_complet">Nom complet</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmation_mot_de_passe">Confirmer le mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="creer_compte">Créer mon compte</string>
    <string name="pas_de_compte">Pas encore de compte ?</string>
    <string name="deja_un_compte">Déjà un compte ?</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="email_invalide">Adresse email invalide</string>
    <string name="mot_de_passe_court">Le mot de passe doit contenir au moins 6 caractères</string>
    <string name="mdp_non_conforme">Les mots de passe ne correspondent pas</string>
    <string name="identifiants_incorrects">Email ou mot de passe incorrect</string>
    <string name="email_deja_utilise">Un compte existe déjà avec cet email</string>
    <string name="compte_cree">Compte créé, vous pouvez vous connecter</string>
    <string name="connexion_reussie">Connexion réussie. Bonjour %1$s !</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="deconnexion_reussie">Vous êtes déconnecté</string>
    <string name="deconnexion_confirmer_titre">Se déconnecter ?</string>
    <string name="deconnexion_confirmer_message">Voulez-vous vraiment vous déconnecter de votre compte, %1$s ?</string>

    <!-- Connexion sociale (Google / Facebook) -->
    <string name="ou_continuer_avec">ou continuer avec</string>
    <string name="se_connecter_google">Se connecter avec Google</string>
    <string name="se_connecter_facebook">Se connecter avec Facebook</string>
    <string name="erreur_connexion_google">Connexion Google annulée ou échouée</string>
    <string name="erreur_connexion_facebook">Connexion Facebook annulée ou échouée</string>
    <string name="erreur_connexion_sociale">Connexion impossible pour le moment</string>
    <string name="social_non_config">Connexion sociale non configurée</string>
    <string name="utilisateur">Utilisateur</string>

    <!-- Mot de passe oublié -->
    <string name="mot_de_passe_oublie">Mot de passe oublié ?</string>
    <string name="mot_de_passe_oublie_titre">Mot de passe oublié</string>
    <string name="mot_de_passe_oublie_sous_titre">Saisissez votre email puis choisissez un nouveau mot de passe.</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmer_nouveau_mot_de_passe">Confirmer le nouveau mot de passe</string>
    <string name="reinitialiser">Réinitialiser le mot de passe</string>
    <string name="email_inexistant">Aucun compte ne correspond à cet email</string>
    <string name="mot_de_passe_reinitialise">Mot de passe réinitialisé. Vous pouvez vous connecter.</string>

    <!-- En-tête d'accueil -->
    <string name="bonjour">Bonjour, %1$s !</string>
    <plurals name="compte_vendeurs">
        <item quantity="one">%d vendeur enregistré</item>
        <item quantity="other">%d vendeurs enregistrés</item>
    </plurals>
</resources>